hw9/src/test/resources/valid/io.L
read x;
write x * 2 * x