hw9/src/test/resources/invalid/semicolons.L
io() {
    read x;
    write x;
}